--- a/app/static/css/expensetracker.css
+++ b/app/static/css/expensetracker.css
@@ -7,12 +7,13 @@ body{
 }
 .heading{
     display: flex;
+    text-align: center;
     justify-content: space-between;
     width: 100%;
-    text-align: center;
 }
 .heading h1{
     margin: auto;
+    text-transform: uppercase;
 }
 .heading .add-category{
     display: flex;
@@ -39,7 +40,7 @@ body{
     /* border: 1px solid black; */
     /* border-radius: 10px; */
     margin-left: 5%;
-    margin-top: 5%;
+    margin-top: 1%;
 }
 .main form{
     /* display: block; */
@@ -67,12 +68,13 @@ form h1{
 .input-box button{
     display: inline-flex;
     padding: 14px;
-    width: 330px;
+    width: 220px;
     border-radius: 10px;
     border: none;
     background-color: #e1e93e;
     text-transform: uppercase;
-    margin: 25px;
+    justify-content: center;
+    margin: 10px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
 }
@@ -83,7 +85,7 @@ form h1{
 }
 .categorywise ul li{
     display: inline-flex;
-    margin: 50px;
+    margin: 20px;
     text-transform: capitalize;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
@@ -110,4 +112,43 @@ tbody tr:nth-child(even) {
 }
 tbody tr:hover {
     background-color: #f1f1f1;
+}
+
+
+.balanceform{
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
+    /* border: 1px solid black; */
+    margin-top: 3%;
+    width: 80%;
+    height: 150px;
+    margin-left: 10%;
+    padding: 0;
+}
+.balanceform form{
+    float: left;
+    /* border: 1px solid; */
+    width: fit-content;
+}
+.balanceform form input{
+    display: block;
+    margin: 10px;
+    padding: 10px;
+}
+.balance{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    float: right;
+    width: fit-content;
+    /* border: 1px solid; */
+}
+.curbal{
+    text-align: center;
+    border: none;
+    border-right: 1px solid black;
+    padding: 10px;
+}
+.netbal{
+    text-align: center;
+    padding: 10px;
 }
