--- a/app/static/css/signupstyle.css
+++ b/app/static/css/signupstyle.css
@@ -14,7 +14,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(90deg, #e2e2e2, #f6ffc9);
+    background: linear-gradient(90deg, #b9f4b2, #4CAF50);
 }
 
 .container{
@@ -101,7 +101,7 @@ form{ width: 100%; }
 .btn{
     width: 100%;
     height: 48px;
-    background: #e3ea5b;
+    background: #4CAF50;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
@@ -138,7 +138,7 @@ form{ width: 100%; }
     left: -250%;
     width: 300%;
     height: 100%;
-    background: #f3e356;
+    background: #4CAF50;
     /* border: 2px solid red; */
     border-radius: 150px;
     z-index: 2;
