--- a/app/static/css/expensetracker.css
+++ b/app/static/css/expensetracker.css
@@ -61,6 +61,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.track{
+    width: 100%;
+    text-align: center;
+}
 
 /* Balance Form */
 .balanceform {
@@ -122,6 +126,7 @@ body {
 .input-box button {
     padding: 13px 30px;
     margin-left: 26px;
+    margin-top: 10px;
     border: none;
     border-radius: 5px;
     font-size: 14px;
@@ -161,6 +166,15 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.download-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content; 
+    margin: 15px;
+}
+
 
 /* Table Styling */
 table {
