--- a/app/static/css/signupstyle.css
+++ b/app/static/css/signupstyle.css
@@ -191,6 +191,11 @@ form{ width: 100%; }
     color: #000;
     box-shadow: none;
 }
+.toggle-panel .btn:hover{
+    color: white;
+    border: 1px solid #fff;
+    transition: 0.4s ease;
+}
 
 @media screen and (max-width: 650px){
     .container{ height: calc(100vh - 40px); }
