style added, mobile responsivenedd added for all pages.

--- a/app/templates/expensetracker.html
+++ b/app/templates/expensetracker.html
@@ -74,7 +74,7 @@
                 <div class="input-box">
                     <input type="number" name="price" placeholder="Price" required step="0.01" min="0">
                     <select name="category" required>
-                        <option value="">Type of expense</option>
+                        <option value="" selected disabled>Type of expense</option>
                         {% for i in categories %}
                         <option value="{{ i.id }}" style="text-transform: capitalize;">{{ i.name }}</option>
                         {% endfor %}
@@ -187,7 +187,8 @@
         <!-- Toast -->
         <div class="toast" id="messageToast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
             <div class="toast-header">
-                <strong class="mr-auto" id="toastTitle">Notice</strong>
+                <i id="toastIcon" style="margin-right: 5px;"></i>
+                <strong class="mr-auto" id="toastTitle"></strong>
                 <!-- <small class="text-muted">Now</small> -->
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
