--- a/app/static/css/signupstyle.css
+++ b/app/static/css/signupstyle.css
@@ -71,7 +71,7 @@ form{ width: 100%; }
     padding: 13px 50px 13px 20px;
     background: #eee;
     border-radius: 8px;
-    border: none;
+    border: 1px solid #ccc;
     outline: none;
     font-size: 16px;
     color: #333;
@@ -79,8 +79,12 @@ form{ width: 100%; }
 }
 
 .input-box input::placeholder{
-    color: #888;
+    /* color: #888; */
     font-weight: 400;
+}
+.input-box input:focus{
+    border: 1px solid #1d4ed8;
+    transition: 0.3s ease;
 }
 
 .input-box i{
@@ -101,13 +105,13 @@ form{ width: 100%; }
 .btn{
     width: 100%;
     height: 48px;
-    background: #4CAF50;
+    background: #4CAF50 !important;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
     cursor: pointer;
     font-size: 16px;
-    color: #fff;
+    color: #fff !important;
     font-weight: 600;
 }
 
